--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
-<% @articles.each do |article| %>
-  <h1><%= article.title %></h1>
-  <p><%= article.content %></p>
-<% end %>
+<div class="container">
+  <% @articles.each do |article| %>
+    <h1><%= link_to article.title, article_path(article) %></h1>
+    <p><%= article.content %></p>
+  <% end %>
+</div>
