--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<p><%= link_to "Create new article", new_article_path() %></p>
+<div class="article-container">
   <% @articles.each do |article| %>
     <h1><%= link_to article.title, article_path(article) %></h1>
     <p><%= article.content %></p>
