--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.content %></p>
-<p><%= link_to "Edit", edit_article_path() %></p>
+<div class="container">
+  <h1><%= @article.title %></h1>
+  <p><%= @article.content %></p>
+  <p><%= link_to "Edit", edit_article_path() %></p>
+</div>
+<p><%= link_to "Back to all articles", articles_path() %></p>
