--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
-  <h1><%= @article.title %></h1>
+  <div class="flex">
+    <h1><%= @article.title %></h1>
+    <p><%= link_to "Edit", edit_article_path() %></p>
+    <p><%= link_to "Delete", article_path(@article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></p>
+  </div>
   <p><%= @article.content %></p>
-  <p><%= link_to "Edit", edit_article_path() %></p>
 </div>
 <p><%= link_to "Back to all articles", articles_path() %></p>
