Added some more CSS, nothing fancy

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,3 +40,12 @@ p {
 .flex > p{
   margin-left: 16px;
 }
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item {
+  padding: 12px;
+}
