--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
-<p><%= link_to "Create new article", new_article_path() %></p>
-<div class="article-container">
+<div class="nav">
+  <p>Wikinimous</p>
+  <div class="nav-item"><%= link_to "Create new article", new_article_path() %></div>
+</div>
+
+
+<div class="container">
   <% @articles.each do |article| %>
     <h1><%= link_to article.title, article_path(article) %></h1>
     <p><%= article.content %></p>
